# permutator

./: Cargo.toml  LICENSE  readme.md
src/: lib.rs
src/copy/: mod.rs
